Fix Spacing issue in Assignment section

--- a/src/views/Home/Assignment/styles.scss
+++ b/src/views/Home/Assignment/styles.scss
@@ -26,14 +26,10 @@
                 border-bottom: var(--width-separator-thin) solid var(--dui-border-color-card);
                 padding: calc(var(--dui-spacing-extra-large) - var(--dui-spacing-small));
 
-                .text {
-                    padding: var(--dui-spacing-small);
-
-                    .link {
-                        text-decoration: underline;
-                        color: var(--dui-color-accent);
-                        font-weight: var(--font-weight-bold);
-                    }
+                .link {
+                    text-decoration: underline;
+                    color: var(--dui-color-accent);
+                    font-weight: var(--font-weight-bold);
                 }
 
                 .date-container {
